--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
-  "name": "aula-1",
+  "name": "react-ninja",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "bootstrap": "^4.4.1",
     "react": "^16.12.0",
+    "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
     "react-scripts": "3.4.0"
   },
@@ -14,7 +16,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test-react": "react-scripts test",
-    "test": "jest",
+    "test": "jest --coverage",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
